Files_2_repo/aws-eks-pod-create-yaml/1_tag-2-aws-king-nginx-deployment-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-3
spec:
  selector:
    app: panampunna-kerala
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: panampunna-kerala
  template:
    metadata:
      labels:
        app: panampunna-kerala
    spec:
      containers:
        - name: panampunna-kerala
          image: 056621886287.dkr.ecr.ap-south-1.amazonaws.com/king-docker-image-ecr-repository:2
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
