Files_2_repo/aws-eks-pod-create-yaml/PW_King-deployment-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: only-service-4
spec:
  selector:
    app: app-vjp-image23
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: only-deployment-4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-vjp-image23
  template:
    metadata:
      labels:
        app: app-vjp-image23
    spec:
      containers:
        - name: app-vjp-image23
          image: vimaldevops/vjp-image23:king-june30
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
      imagePullSecrets:
        - name: vjp-docker-hub-secret
