Files_2_repo/aws-eks-pod-create-yaml/Set1_1-King-deployment-service-Ingress1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: set1-king-service-1
spec:
  selector:
    app: set1-app-vjp-image23
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: set1-king-deployment-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: set1-app-vjp-image23
  template:
    metadata:
      labels:
        app: set1-app-vjp-image23
    spec:
      containers:
        - name: set1-app-vjp-image23
          image: vimaldevops/vjp-image23:king-June29Rain
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
      imagePullSecrets:
        - name: vjp-docker-hub-secret

---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: set1-3-king-ingress-1
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-arn:  arn:aws:elasticloadbalancing:ap-south-1:056621886287:loadbalancer/app/john-alb-name/06557e1116ed02c9
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - host: john-alb-name-1903845714.ap-south-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: set1-king-service-1
                port:
                  number: 80
